designSite/static/css/design.css
@font-face {
  /* font-properties */
  font-family: OCRAStd;
  src: url('../font/OCRAStd.otf');
}

.menu a>img,
.controller a>img {
  width: 1.75rem;
  height: 1.75rem;
  margin-right: 0.75rem;
  cursor: pointer;
  transition: all 0.2s ease;
}

.menu a.active>img,
.controller a.active>img {
  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.7));
  /*Highlight the mode button*/
  transition: all 0.2s ease;
}

.ui.fixed.menu {
  z-index: 100;
}

.ui.labeled.left.inline.vertical.sidebar.menu {
  padding-top: 50px;
  width: 68px;
  z-index: 10;
}

#operation>img {
  margin-right: 0;
}

#logo {
  margin-left: auto;
}

#logo>a>img {
  height: 2.5rem;
  width: 5rem;
}

.window {
  position: absolute;
  border: 1px solid grey;
  border-radius: 5px;
  background-color: #edf3fa;
  z-index: 10;
}

.window>.nav,
.window>.content {
  width: 100%;
}

.window>.nav {
  padding: 0.5rem;
  height: 2rem;
}

.window>.nav>i {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  font-size: 1rem;
  line-height: 1rem;
}

.window>.content {
  padding: 1rem;
  height: 100%;
}

/* Part panel */

#part-panel {
  width: 300px;
  top: 100px;
  right: 20px;
  font-size: 1rem;
}

#search-parts-dropdown {
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
}

#part-info-tab {
  background-color: #ffffff !important;
  min-height: 400px;
}

#part-info-tab>img {
  padding-top: 1rem;
}

#part-info-tab>.description {
  height: 50px;
  padding: 12px;
  margin-top: 5px;
  background-color: #c0a6a9;
  text-align: center;
  font-size: 20px;
  font-weight: bold;
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
}

.ui.top.attached.tabular.menu {
  background-color: #c0a6a9;
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
}

.ui.top.attached.tabular.menu>.active.item {
  background-color: transparent !important;
  border: none;
}

.controller {
  position: absolute;
  bottom: 0px;
  margin-left: -1rem;
  padding: 1rem 0 0.5rem 1rem;
  width: 100%;
  /* border: 1px solid #000000; */
  background-color: #ffffff;
}

.controller a>img {
  width: 1.6rem;
  height: 1.6rem;
  margin-bottom: -0.5rem;
}

#part-info-des {
  max-height: 150px;
  overflow-y: auto;
}

.ui.tabular.menu>.item {
  cursor: pointer;
}

.ui.tabular.menu>.item:not(.active):hover {
  background-color: #b6cadc;
}

.tab-context {
  margin-top: 1rem;
}

#part-panel-dropper {
  position: absolute;
  right: 0;
  height: 100%;
  width: 100px;
  top: 0;
  background-color: transparent;
}

/* Favourite window */

#fav-win>.content {
  max-height: calc(100% - 3rem);
  overflow-y: auto;
}

#fav-win {
  width: 400px;
  top: 200px;
  right: 400px;
  max-height: 600px;
}

.fav-part-seg {
  cursor: pointer;
}

#fav-win>.content>.ui.segment>.combine-circuit-button {
  background-color: #eee;
  width: 2rem;
  height: 2rem;
  position: absolute;
  right: 1rem;
  left: 1rem;
  border-radius: 50%;
  cursor: pointer;
  line-height: 2rem;
  text-align: center;
  transition: opacity 0.2s ease;
}

#fav-win>.content>.ui.segment>.combine-circuit-button>i {
  margin-right: 0;
  pointer-event: none;
  /* animation: */
}

#fav-win>.content>.ui.segment>.remove-part-fav {
  background-color: #eee;
  width: 2rem;
  height: 2rem;
  position: absolute;
  right: 1rem;
  left: 1rem;
  border-radius: 50%;
  cursor: pointer;
  line-height: 2rem;
  text-align: center;
  transition: opacity 0.2s ease;
}

#fav-win>.content>.ui.segment p {
  margin: 0 0 0 3rem;
}

#fav-win>.content>.ui.segment img {
  width: 4rem;
  height: auto;
  float: right;
}

/* Toolbox */

#toolbox {
  background-color: white;
  border: none;
  opacity: 1;
}

#toolbox a>img,
#toolbox div>img {
  width: 1.75rem;
  height: 1.75rem;
  margin-right: 0.75rem;
  cursor: pointer;
  transition: all 0.2s ease;
}

#toolbox div>img.active {
  filter: drop-shadow(0px 0px 5px rgb(255, 255, 255));
}

body {
  overflow: hidden;
}

/* div.ui.fixed.menu {
  background-color: white; menu background color
} */

div.ui.fixed.menu>div.ui.container {
  margin-right: 3rem !important;
  width: 100%;
  height: 3rem;
}

.item>i.icon {
  margin: 0 0.25rem !important;
}

div.ui.fixed.menu>div.container>.item>div.ui.dropdown {
  margin-left: 0.25rem;
}

#canvas-box {
  font-size: 1rem;
  width: 100%;
  height: 100%;
  /* padding-top: 4.5rem; */
  transition: all 0.2s ease;
}

.canvas {
  background-color: #f8e7e9; /*canvas background*/
  position: relative;
  overflow: hidden;
  /* opacity: 0.7; */
}

#canvas {
  width: 100%;
  height: 100%;
  background-color: #f8e7e9; /*canvas background*/
  /* opacity: 0.7; */
}

#part-src-seg {
  padding-bottom: calc(14px + 1rem + 4px);
  max-height: 240px;
  overflow-y: auto;
  overflow-x: hidden;
}

#part-src-divider {
  margin-bottom: 4px;
}

#part-src-more {
  float: right;
}

.ui-resizable-handle {
  position: absolute;
}

.ui-resizable-w {
  cursor: w-resize;
  height: 100%;
  width: 1rem;
  top: 0;
  left: 0;
}

.ui-resizable-s {
  cursor: s-resize;
  height: 1rem;
  width: 100%;
  bottom: 0;
  left: 0;
}

.ui-resizable-sw {
  cursor: sw-resize;
  height: 1rem;
  width: 1rem;
  bottom: 0;
  left: 0;
}

div.part-helper {
  /* border: 1px solid black; */
  background-color: white;
  width: 100px;
  text-align: center;
  opacity: 0.7;
}

div.part-helper>div.ui.image>img {
  width: 100%;
  height: auto;
}

#load-modal .ui.segment {
  cursor: pointer;
}

#load-modal p {
  margin-bottom: 0em;
}

.modal:not(.basic) {
  border-radius: 1em;
}

.modal:not(.basic) .header,
.modal:not(.basic) .content,
.modal:not(.basic) .actions {
  border: 0 !important;
  background-color: #7fa7d3 !important;
}

.modal:not(.basic) .content:nth-child(2) {
  padding-top: 0;
}

.ui.bottom.attached.big.buttons {
  margin: 0;
}

.ui.white.button {
  background-color: white;
  color: #444;
}

.ui.white.button:hover {
  background-color: #eeeeee;
}

.ui.white.button:active {
  background-color: #dddddd;
}

.modal:not(.basic)>.actions {
  padding: 0;
}

.modal:not(.basic) .header
/*.modal:not(.basic) label*/ {
  color: white !important;
}

#simulation-modal .content {
  background-color: white !important;
}

.simulation-result-container {
  background-color: white;
  padding: 1em;
  border-radius: 5px;
}

.plasmid-container {
  background-color: white;
  border-top-left-radius: 0.2rem;
  border-top-right-radius: 0.2em;
  text-align: center;
}

.plasmid-edit {
  padding: 1rem;
}

.plasmid-edit>form {
  margin-bottom: 0;
}

.ui.vertical.menu {
  width: 5rem;
}

.ui.vertical.menu img {
  width: 1.75rem;
  height: 1.75rem;
}

#toolbox,
div.ui.fixed.menu {
  background-color: #ffffff;
}


.ui.vertical.menu {
  background-color: #a83140;
}

#fav-win,
#part-panel,
#part-src-seg,
.ui.top.attached.tabular.menu div {
  background-color: #7fa7d3 !important;
}

.ui.top.attached.tabular.menu .active.item,
div h5,
#fav-win div h5,
#part-info-tab div h5,
#part-info-tab div p,
#part-type,
#part-info-name {
  color: black;
  text-align: center;
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif;
}

.search-header {
  color: white;
  font-family: OCRAStd;
  font-weight: bold;
  font-size: 20px;
  margin-bottom: 10px;
}

.default.text {
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif
}

#advanced-search-button {
  float: right;
  width: 2rem;
  height: 2rem;
  margin-top: calc(0% - 45px);
}

.ui.white.header {
  text-align: center;
  font-size: 30px;
}

.item.cloumn {
  min-width: 180px;
  margin-left: 10px;
  margin-top: 5px;
  font-family: 'Source Sans Pro','Helvetica Neue',Arial,Helvetica,sans-serif
  font-size: 15px;
  font-weight: bold;
}

.checked {
  color: #000000 !important;
}

.unchecked {
  color: grey !important;
}


.SDinDesign-device.jtk-draggable.ui-droppable {
  background-color: #f8e7e9;
}

.pusher {
  background-color: #f8e7e9 !important;
}

.SDinDesign-part p {
  color: #000000;
}

.ui.divider {
  border: 1px solid rgba(34, 36, 38, .15) !important;
}

#chassis-dropdown {
  width: 100%;
}

#analysis-modal .selection.dropdown {
  width: 100%;
}

/* Share modal tab */
.bottom.attached.tab {
  padding: 0 !important;
  border: 0 !important;
}

#username {
  margin-right: 1.5em;
  color: #000000;
}

#username span {
  color: #a83140;
  text-decoration: underline;
}

.live-canvas {
  position: absolute;
}

.draw {
  cursor: url(/static/cursor/pen.png), auto !important;
}

.erase {
  cursor: url(/static/cursor/eraser.png), auto !important;
}

.live-canvas.hidden {
  display: none;
}

#info-box {
  top: 3.5em;
  width: 35%;
  float: right;
  margin: 1em;
  opacity: 0.8;
}

.unselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.orad-error {
  color: rgb(168, 49, 64);
}

.authority-delete {
  float: right;
}

.authority-delete:hover {
  cursor: pointer;
}

#part-info-des{
  text-align: center;
}
#part-info-des > span {
  text-align: left;
}

#show-part-src-seg-button {
  margin: 0 auto;
}

